{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 121,
  "lineage": "c8dee4c9-b62e-1acc-8d9a-327a390d37cc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2846",
                  "5462"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-06T21:47:03.400-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/a2020-cr460-290721/global/firewalls/internal-control",
            "log_config": [],
            "name": "internal-control",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "priority": 1000,
            "project": "a2020-cr460-290721",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/firewalls/internal-control",
            "source_ranges": [
              "10.0.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-06T21:47:03.386-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/a2020-cr460-290721/global/firewalls/public-web",
            "log_config": [],
            "name": "public-web",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "priority": 1000,
            "project": "a2020-cr460-290721",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/firewalls/public-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-06T21:47:03.528-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/a2020-cr460-290721/global/firewalls/ssh-public",
            "log_config": [],
            "name": "ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "priority": 1000,
            "project": "a2020-cr460-290721",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/firewalls/ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-traitement",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-06T21:47:03.390-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/a2020-cr460-290721/global/firewalls/ssh-traitement",
            "log_config": [],
            "name": "ssh-traitement",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "priority": 1000,
            "project": "a2020-cr460-290721",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/firewalls/ssh-traitement",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "traitement"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "canard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/disks/canard"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/a2020-cr460-290721/zones/us-east1-b/instances/canard",
            "instance_id": "3230614800967988913",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "wivJ9FsG-pI=",
            "metadata_startup_script": "apt-get -y update \u0026\u0026 apt-get -y upgrade \u0026\u0026 apt-get -y install apache2 \u0026\u0026 systemctl start apache2",
            "name": "canard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.37.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
                "network_ip": "172.16.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-dmz",
                "subnetwork_project": "a2020-cr460-290721"
              }
            ],
            "project": "a2020-cr460-290721",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/instances/canard",
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cheval",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/disks/cheval"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/a2020-cr460-290721/zones/us-east1-b/instances/cheval",
            "instance_id": "4965908358806697649",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "oMe4oi8AkRg=",
            "name": "cheval",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.229.34.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
                "network_ip": "10.0.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-traitement",
                "subnetwork_project": "a2020-cr460-290721"
              }
            ],
            "project": "a2020-cr460-290721",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/instances/cheval",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "traitement"
            ],
            "tags_fingerprint": "mIPGPFNjcSQ=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-traitement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fermier",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/disks/fermier"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/a2020-cr460-290721/zones/us-east1-b/instances/fermier",
            "instance_id": "3644105291262392019",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "oMe4oi8AkRg=",
            "name": "fermier",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.75.253.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/default",
                "network_ip": "10.142.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/default",
                "subnetwork_project": "a2020-cr460-290721"
              }
            ],
            "project": "a2020-cr460-290721",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/instances/fermier",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "fermier"
            ],
            "tags_fingerprint": "6dBZyLLmXhM=",
            "zone": "us-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/disks/mouton"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/a2020-cr460-290721/zones/us-east1-b/instances/mouton",
            "instance_id": "1890776100595889851",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "oMe4oi8AkRg=",
            "name": "mouton",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.75.153.201",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
                "network_ip": "10.0.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-interne",
                "subnetwork_project": "a2020-cr460-290721"
              }
            ],
            "project": "a2020-cr460-290721",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/zones/us-east1-b/instances/mouton",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-interne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devoir1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/a2020-cr460-290721/global/networks/devoir1",
            "name": "devoir1",
            "project": "a2020-cr460-290721",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-06T21:47:03.654-07:00",
            "gateway_address": "172.16.3.1",
            "id": "projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-dmz",
            "ip_cidr_range": "172.16.3.0/24",
            "name": "prod-dmz",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "a2020-cr460-290721",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-dmz"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-interne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-06T21:47:04.600-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-interne",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "prod-interne",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "a2020-cr460-290721",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-interne"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-traitement",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-06T21:47:03.514-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-traitement",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "prod-traitement",
            "network": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "a2020-cr460-290721",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/a2020-cr460-290721/regions/us-east1/subnetworks/prod-traitement"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    }
  ]
}